--- a/detail-page/how-to-keep-your-subaru-alive.html
+++ b/detail-page/how-to-keep-your-subaru-alive.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="https://liftedsubaru.github.io/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubarusite/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <a href="https://liftedsubaru.github.io/index.html">
+  <a href="file:///Users/honzie/Documents/personal/liftedsubarusite/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -51,10 +51,10 @@
     <section class="details">
         <h1 class="details-headline">How To Keep Your Subaru Alive</h1>
         <p class="details-author">by Larry Owens</p>
-          <a href="https://liftedsubaru.github.io/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF Archive</a>
+          <a href="file:///Users/honzie/Documents/personal/liftedsubarusite/static/pdf/howToKeepYourSubaruAlive.pdf" class="btn grey-background">PDF Archive</a>
 
         <div class="details-content">
-            <img src="https://liftedsubaru.github.io/static/img/guides/howtokeepyoursubaruAlive.png">
+            <img src="file:///Users/honzie/Documents/personal/liftedsubarusite/static/img/guides/howtokeepyoursubaruAlive.png">
           <p>This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</p>
         </div>
     </section>
@@ -77,8 +77,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="https://liftedsubaru.github.io/scripts/script.js"></script>
-  <script src="https://liftedsubaru.github.io/scripts/accordion.js"></script>
+  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/script.js"></script>
+  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/accordion.js"></script>
 
 </body>
 
