--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="https://liftedsubaru.github.io/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubarusite/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <a href="https://liftedsubaru.github.io/index.html">
+  <a href="file:///Users/honzie/Documents/personal/liftedsubarusite/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -48,7 +48,7 @@
   </div>
 
     <section class="grid-mGrid">
-      <a style="float:right;" href='https://liftedsubaru.github.io/list.html'>View as List</a>
+      <a style="float:right;" href='file:///Users/honzie/Documents/personal/liftedsubarusite/list.html'>View as List</a>
       <div class="controls cf">
         <div class="control search">
           <div class="control-icon">
@@ -76,10 +76,11 @@
       <div class="grid">
         <!-- Tiles! -->
 
-          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="0" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
+          <div style="background-image: url('file:///Users/honzie/Documents/personal/liftedsubarusite/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="0" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
             <a href="./detail-page/ea82-to-ej22-swap-guide.html"> <div class="item-content">
               <div class="card">
-                <div class="card-id" style="color:#3d3d3d;font-weight:600;">ea82</div>
+                <div class="card-id">ea82</div>
+                <div class="card-author">numbchux</div>
                 <div class="card-title">EA82 to Ej22 Swap Guide</div>
                 <div class="card-description">Swap guide from Ultimatesubaru</div>
                 </div>
@@ -87,10 +88,11 @@
             </a>
           </div>
 
-          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="1" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+          <div style="background-image: url('file:///Users/honzie/Documents/personal/liftedsubarusite/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="1" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
             <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
               <div class="card">
-                <div class="card-id" style="color:#3d3d3d;font-weight:600;">ea82</div>
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
                 <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
                 <div class="card-description"></div>
                 </div>
@@ -98,10 +100,11 @@
             </a>
           </div>
 
-          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/porting-min.png');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="DIY Head Porting">
+          <div style="background-image: url('file:///Users/honzie/Documents/personal/liftedsubarusite/static/img/guides/porting-min.png');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="DIY Head Porting">
             <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
               <div class="card">
-                <div class="card-id" style="color:#3d3d3d;font-weight:600;">generic build</div>
+                <div class="card-id">generic build</div>
+                <div class="card-author">Tech Staff</div>
                 <div class="card-title">DIY Head Porting</div>
                 <div class="card-description"></div>
                 </div>
@@ -109,10 +112,11 @@
             </a>
           </div>
 
-          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="3" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+          <div style="background-image: url('file:///Users/honzie/Documents/personal/liftedsubarusite/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="3" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
             <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
               <div class="card">
-                <div class="card-id" style="color:#3d3d3d;font-weight:600;">ej22</div>
+                <div class="card-id">ej22</div>
+                <div class="card-author">End Wrench</div>
                 <div class="card-title">End Wrench: EJ22 Overhaul</div>
                 <div class="card-description"></div>
                 </div>
@@ -120,10 +124,11 @@
             </a>
           </div>
 
-          <div style="background-image: url('https://liftedsubaru.github.io/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="4" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+          <div style="background-image: url('file:///Users/honzie/Documents/personal/liftedsubarusite/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="4" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
             <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
               <div class="card">
-                <div class="card-id" style="color:#3d3d3d;font-weight:600;">ea82</div>
+                <div class="card-id">ea82</div>
+                <div class="card-author">Larry Owens</div>
                 <div class="card-title">How To Keep Your Subaru Alive</div>
                 <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
                 </div>
@@ -154,8 +159,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="https://liftedsubaru.github.io/scripts/script.js"></script>
-  <script src="https://liftedsubaru.github.io/scripts/accordion.js"></script>
+  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/script.js"></script>
+  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/accordion.js"></script>
 
 </body>
 
