--- a/detail-page/ea82-to-ej22-swap-guide.html
+++ b/detail-page/ea82-to-ej22-swap-guide.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubarusite/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <a href="file:///Users/honzie/Documents/personal/liftedsubarusite/index.html">
+  <a href="/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -51,10 +51,10 @@
     <section class="details">
         <h1 class="details-headline">EA82 to Ej22 Swap Guide</h1>
         <p class="details-author">by numbchux</p>
-          <a href="file:///Users/honzie/Documents/personal/liftedsubarusite/static/pdf/numbchux-EA82toEj22Swap.pdf" class="btn grey-background">PDF Archive</a>
+          <a href="/static/pdf/numbchux-EA82toEj22Swap.pdf" class="btn grey-background">PDF Archive</a>
 
         <div class="details-content">
-            <img src="file:///Users/honzie/Documents/personal/liftedsubarusite/static/img/guides/swapguide-min.png">
+            <img src="/static/img/guides/swapguide-min.png">
           <p>This is the premier guide for the ea-ej swap.</p><p>That being said, I don't love it. It is primarily geared towards an EA81-EJ22 Swap, and his wiring section leaves a lot to be desired.</p><p>I will be producing an appendix to this PDF to fill in some of the blanks.</p>
         </div>
     </section>
@@ -77,8 +77,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/script.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/accordion.js"></script>
+  <script src="/scripts/script.js"></script>
+  <script src="/scripts/accordion.js"></script>
 
 </body>
 
