--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubarusite/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <a href="file:///Users/honzie/Documents/personal/liftedsubarusite/index.html">
+  <a href="/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -48,7 +48,7 @@
   </div>
 
     <section class="grid-mGrid">
-      <a style="float:right;" href='file:///Users/honzie/Documents/personal/liftedsubarusite/list.html'>View as List</a>
+      <a style="float:right;" href='/list.html'>View as List</a>
       <div class="controls cf">
         <div class="control search">
           <div class="control-icon">
@@ -67,8 +67,8 @@
             <!--TODO this needs to be created by handlebars-->
             <option value="" selected>All Types</option>
               <option value="EA82">EA82</option>
-              <option value="GENERIC BUILD">GENERIC BUILD</option>
               <option value="EJ22">EJ22</option>
+              <option value="GENERIC BUILD">GENERIC BUILD</option>
           </select>
         </div>
       </div>
@@ -76,7 +76,7 @@
       <div class="grid">
         <!-- Tiles! -->
 
-          <div style="background-image: url('file:///Users/honzie/Documents/personal/liftedsubarusite/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="0" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
+          <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="0" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
             <a href="./detail-page/ea82-to-ej22-swap-guide.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -88,7 +88,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('file:///Users/honzie/Documents/personal/liftedsubarusite/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="1" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="1" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
             <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -100,19 +100,7 @@
             </a>
           </div>
 
-          <div style="background-image: url('file:///Users/honzie/Documents/personal/liftedsubarusite/static/img/guides/porting-min.png');" class="item h2 w4" data-id="2" data-category="generic build" data-description="" data-title="DIY Head Porting">
-            <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
-              <div class="card">
-                <div class="card-id">generic build</div>
-                <div class="card-author">Tech Staff</div>
-                <div class="card-title">DIY Head Porting</div>
-                <div class="card-description"></div>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div style="background-image: url('file:///Users/honzie/Documents/personal/liftedsubarusite/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="3" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-id="2" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
             <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ej22</div>
@@ -124,7 +112,19 @@
             </a>
           </div>
 
-          <div style="background-image: url('file:///Users/honzie/Documents/personal/liftedsubarusite/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="4" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="3" data-category="generic build" data-description="" data-title="DIY Head Porting">
+            <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author">Tech Staff</div>
+                <div class="card-title">DIY Head Porting</div>
+                <div class="card-description"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="4" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
             <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
@@ -159,8 +159,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/script.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/accordion.js"></script>
+  <script src="/scripts/script.js"></script>
+  <script src="/scripts/accordion.js"></script>
 
 </body>
 
