--- a/list.html
+++ b/list.html
@@ -13,7 +13,7 @@
 
 -->
 <head>
-  <link rel="stylesheet" href="file:///Users/honzie/Documents/personal/liftedsubarusite/styles/styles.css" type="text/css">
+  <link rel="stylesheet" href="/styles/styles.css" type="text/css">
 
   <!-- FAVICON -->
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <a href="file:///Users/honzie/Documents/personal/liftedsubarusite/index.html">
+  <a href="/index.html">
     <h2 id='LS-title' aria="Home" class="section-title"><span>LIFTED SUBARUS</span></h2>
     <p style="margin-top:-25px;font-size:.6em;" class="section-title">Curated Offroad Subaru Build Guides</p>
   </a>
@@ -50,7 +50,7 @@
 
 
     <section class="list">
-      <a style="float:right;" href='file:///Users/honzie/Documents/personal/liftedsubarusite/index.html'>View as Grid</a>
+      <a style="float:right;" href='/index.html'>View as Grid</a>
       <table id="listView">
       <tr>
         <th>TITLE</th>
@@ -79,20 +79,20 @@
         <td>  <a href="/static/pdf/ImprovedShockAbsorbersAndSpringCoilsOnLoyales.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
-        <td>DIY Head Porting</td>
-        <td>
-        Tech Staff
-      </td>
-        <td>  </td>
-        <td>  <a href="/static/pdf/Head-Porting-DIY.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
         <td>End Wrench: EJ22 Overhaul</td>
         <td>
         End Wrench
       </td>
         <td>  </td>
         <td>  <a href="/static/pdf/EJ22-Overhaul.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
+        <td>DIY Head Porting</td>
+        <td>
+        Tech Staff
+      </td>
+        <td>  </td>
+        <td>  <a href="/static/pdf/Head-Porting-DIY.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>How To Keep Your Subaru Alive</td>
@@ -123,8 +123,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.3.1/web-animations.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="https://unpkg.com/muuri@0.6.2/dist/muuri.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/script.js"></script>
-  <script src="file:///Users/honzie/Documents/personal/liftedsubarusite/scripts/accordion.js"></script>
+  <script src="/scripts/script.js"></script>
+  <script src="/scripts/accordion.js"></script>
 
 </body>
 
