--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           <select class="control-field filter-field form-control">
             <!--TODO this needs to be created by handlebars-->
             <option value="" selected>All Types</option>
+              <option value="GENERIC BUILD">GENERIC BUILD</option>
               <option value="EA82">EA82</option>
               <option value="EJ22">EJ22</option>
-              <option value="GENERIC BUILD">GENERIC BUILD</option>
           </select>
         </div>
       </div>
@@ -76,25 +76,25 @@
       <div class="grid">
         <!-- Tiles! -->
 
-          <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="0" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
+          <div style="" class="item h2 w4" data-id="0" data-category="generic build" data-description="" data-title="Safe Recovery Technique">
+            <a href="./detail-page/safe-recovery-technique.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author"></div>
+                <div class="card-title">Safe Recovery Technique</div>
+                <div class="card-description"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-id="1" data-category="ea82" data-description="Swap guide from Ultimatesubaru" data-title="EA82 to Ej22 Swap Guide">
             <a href="./detail-page/ea82-to-ej22-swap-guide.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
                 <div class="card-author">numbchux</div>
                 <div class="card-title">EA82 to Ej22 Swap Guide</div>
                 <div class="card-description">Swap guide from Ultimatesubaru</div>
-                </div>
-              </div>
-            </a>
-          </div>
-
-          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="1" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
-            <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
-              <div class="card">
-                <div class="card-id">ea82</div>
-                <div class="card-author">Loyale 2.7 Turbo</div>
-                <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
-                <div class="card-description"></div>
                 </div>
               </div>
             </a>
@@ -112,7 +112,19 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="3" data-category="generic build" data-description="" data-title="DIY Head Porting">
+          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-id="3" data-category="ea82" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+            <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
+                <div class="card-description"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/porting-min.png');" class="item h2 w4" data-id="4" data-category="generic build" data-description="" data-title="DIY Head Porting">
             <a href="./detail-page/diy-head-porting.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">generic build</div>
@@ -124,13 +136,85 @@
             </a>
           </div>
 
-          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="4" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
+          <div style="background-image: url('/static/img/guides/injectorCleansingProcedure1.jpg');" class="item h2 w4" data-id="5" data-category="generic build" data-description="title with spaces and thing&#x27;s" data-title="title with spaces and thing&#x27;s">
+            <a href="./detail-page/title-with-spaces-and-things.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <div class="card-title">title with spaces and thing&#x27;s</div>
+                <div class="card-description">title with spaces and thing&#x27;s</div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/IgnitionModuleTest.jpg');" class="item h2 w4" data-id="6" data-category="ea82" data-description="" data-title="Ignition Module Testing">
+            <a href="./detail-page/ignition-module-testing.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <div class="card-title">Ignition Module Testing</div>
+                <div class="card-description"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-id="7" data-category="ea82" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
             <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
               <div class="card">
                 <div class="card-id">ea82</div>
                 <div class="card-author">Larry Owens</div>
                 <div class="card-title">How To Keep Your Subaru Alive</div>
                 <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/weldedDiff.jpg');" class="item h2 w4" data-id="8" data-category="generic build" data-description="" data-title="DIY: Welded Differential">
+            <a href="./detail-page/diy-welded-differential.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author"></div>
+                <div class="card-title">DIY: Welded Differential</div>
+                <div class="card-description"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/thermoswitch.jpg');" class="item h2 w4" data-id="9" data-category="ea82" data-description="Get your electric fan to switch on at a lower temp" data-title="Cooler Thermoswitch">
+            <a href="./detail-page/cooler-thermoswitch.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <div class="card-title">Cooler Thermoswitch</div>
+                <div class="card-description">Get your electric fan to switch on at a lower temp</div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-id="10" data-category="generic build" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
+            <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">generic build</div>
+                <div class="card-author"></div>
+                <div class="card-title">DIY Fender Cutting &amp; Rolling</div>
+                <div class="card-description"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div style="background-image: url('/static/img/guides./JesZeK-SubaruEA82AnimatedEngine.gif');" class="item h2 w4" data-id="11" data-category="ea82" data-description="" data-title="Weber Conversion">
+            <a href="./detail-page/weber-conversion.html"> <div class="item-content">
+              <div class="card">
+                <div class="card-id">ea82</div>
+                <div class="card-author">Loyale 2.7 Turbo</div>
+                <div class="card-title">Weber Conversion</div>
+                <div class="card-description"></div>
                 </div>
               </div>
             </a>
